# dhe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/routers/: upload.py
app/services/: dedupe_analysis.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
tests/: test_app.py  test_dedupe_analysis.py  test_routes.py
