[project]
name = "dhe-backend"
version = "0.1.0"
description = "DHE backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
