[project]
name = "dhe"
version = "0.1.0"
description = "FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
